--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 
 <body>
 
-  <div id="contForexchange"> 
-<div id="exchange"></div>
-<div id="buy"></div>
-<div id="sale"></div>
-</div>
+  <div id="thisCity"></div>
   
   
 
