third final commit
ready

--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
 
 <body>
 
-  <div id="thisCity"></div>
+  
+<body>
+
+  
+ <div id="cont">
+<div id="thisCity"></div>
+<div id="contForexchange"> 
+<div id="exchange"></div>
+<div id="buy"></div>
+<div id="sale"></div>
+</div>
+
+  </div>
+  
+  <div id="towns">
+<input type="text" id="chooseTown" placeholder="enter the city"></input><button  id="add">Add</button>
+  </div>
+<div id="show"></div>
+
+</body>
   
   
 
